--- a/37.jsp선언jsp사용.md
+++ b/37.jsp선언jsp사용.md
@@ -124,7 +124,7 @@
 ## 2-2. 연결된 jsp문서
 ```
 <%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8" import="java.util.Enumeration"%>
+    pageEncoding="UTF-8" import="java.util.Enumeration, java.util.Map"   %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -167,10 +167,8 @@
 		    	%>
 		</li>
 	</ul>
-	<hr/>
-	*request.getParameterNames()이용
-	=> 웹브라우저가 전송한 파라미터의 이름 목록을 가져오기 <p/>
 	
+	<hr/>
 	<%
 	Enumeration<String> paraEnum = request.getParameterNames();
 	while(paraEnum.hasMoreElements()){
@@ -181,6 +179,26 @@
 	}
 	%>
 	
+	<hr/>
+	*request.getParameterMap()이용<br>
+	=> 웹 브라우저가 전송한 파라미터의  Map을 가져오기<br>
+	map참조변수명.put(Object key명,Object value)=> Map에 value저장<br>		
+	map참조변수명.get(Object key명)=> Map에서 value가져오기
+	
+	<%
+	/*parameter명의 데이터타입은 String, 
+    파라미터의 value타입은 String[].
+  String[]이유는 하나의 파라미터에 여러 개의 값이 들어올 수 있으므로 배열처리한다  */
+  
+	Map<String,String[]> paramMap = request.getParameterMap();
+	
+	String[] animals1 = paramMap.get("animals");
+	
+	for(int i=0 ; i<animals1.length ; i++){
+	 System.out.println(animals1[i]); //콘솔출력
+	 out.println(animals1[i]+"<br/>");//브라우저화면에 출력
+	}	
+	%>
 </body>
 </html>
 ```
