--- a/43.window02,.md
+++ b/43.window02,.md
@@ -130,6 +130,139 @@
 </html>
 ```
 
+## 3. mysql db연동 가져오기.
+```
+<%@page import="javafx.beans.binding.StringBinding"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ page import="java.sql.*,java.util.Date, java.io.*" %>  
+<!DOCTYPE html>
+<html>
+<head>
+
+<meta charset="UTF-8">
+<title>long data 가져오기</title>
+ <link href="http://localhost:8087/webPro/css/table1.css" rel="stylesheet">
+</head>
+
+<body>
+  <h2> long data 가져오기.(p398)</h2>
+  <P> resultSet에서 MEDIUMTEXT타입 값 읽어오기.</P>
+  
+  <table id="table1">
+  <caption>부서목록</caption>
+  <thead>
+   <tr>
+    <th>회원ID</th>
+    <th>내용</th>
+   </thead>
+   <tbody>
+<%
+String url ="jdbc:mysql://localhost:3306/chap14?"+
+	      "useUnicode=true&characterEncoding=utf8";
+	String user="jspexam";
+	String password="jsppw";
+Connection conn=null;
+PreparedStatement stmt=null;
+ResultSet rs = null; //select쿼리문의 실행결과집합을 저장하기위한 변수선언 및 초기화
+Reader reader = null;
+String history =null;
+
+//1.JDBC Driver등록
+try {
+  Class.forName("com.mysql.jdbc.Driver");
+} catch (ClassNotFoundException e) {
+  System.out.println("ClassNotFoundException발생 e="+e);
+  e.printStackTrace();
+}
+System.out.println("1.JDBC Driver등록-성공");
+
+//2.연결 Connection얻기
+//DriverManager.getConnection(연결DB서버url, 접속user명, 비밀번호)
+try {
+  conn=DriverManager.getConnection(url, user, password);
+} catch (SQLException e) {
+  System.out.println("SQLException발생");
+  e.printStackTrace();
+}
+System.out.println("2.Connection얻기-성공");
+
+//3.객체준비-PreparedStatement객체 
+try {
+  String sql = 
+    "select memberid,history "+
+    "from member_history ";
+    
+
+  stmt =conn.prepareStatement(sql);
+  System.out.println("3.PreparedStatement객체 생성");
+  
+  //4.쿼리실행
+  rs = stmt.executeQuery();
+  System.out.println("4.쿼리문실행결과 : ");
+  while( rs.next() ) { //rs.next()는 다음행(new row)있으면 true리턴
+	  String memberid=rs.getString("memberid");//deptno컬럼의 값을 자바에서 int로 처리
+    /* history=rs.getString("history");//dname컬럼값 가져오기 */
+    reader = rs.getCharacterStream("history");
+    
+    if(reader!=null){
+    	
+    	StringBuilder buff = new StringBuilder();// 읽은 데이터를 저장하는 임시메모리저장공간
+    	char[] ch = new char[512];
+    	int len = -1;
+    	//read()는 array에 있는 characters를 읽는다.
+    	//read()읽은 characters수를 리턴하고 stream의 끝(end)에 도달하면 -1를 리턴한다.
+    	// 아래 while은 가져올 데이터가 있는동안 실행하겠다.
+    	while ((len = reader.read(ch))!= -1){
+    		//읽어들인 문자열 개수만큼 임시기억장소인 buff의 첫번째 위치부터 추가.
+    		buff.append(ch, 0, len); //()
+    	}
+    	//임시기억장소인 StringBuilder타입을 ToString이용하여 String타입으로 변환.
+    	history=buff.toString(); //p 399 61라인
+    }
+    
+%>   
+    <%--테이블의 조회된 레코드수만큼 반복 start --%>
+    <tr>
+     <td><%=memberid %></td>
+     <td><%=history %></td>
+    </tr>
+<%
+  }//while끝
+  
+} catch (SQLException e1) {
+  System.out.println("executeUpdate()실행관련 에러");
+  e1.printStackTrace();
+} catch(IOException e2) {
+	e2.printStackTrace();
+} finally{
+	if(reader !=null) {try{reader.close();} catch(IOException ex){}}
+}
+
+//5.자원반납
+try {
+  if(rs!=null) {  
+    rs.close();
+  }
+  if(stmt!=null) {
+    stmt.close();
+  }
+  if(conn!=null) {
+    conn.close();
+  }
+} catch (SQLException e) {
+  e.printStackTrace();
+}
+System.out.println("5.자원반납완료");
+%>
+    <%--테이블의 조회된 레코드수만큼 반복 end --%>
+   </tbody>
+  </tbody>
+ </table>
+ 
+</body>
+</html>
+```
 
 
 
