--- a/44.window3,location.md
+++ b/44.window3,location.md
@@ -173,77 +173,93 @@ function startTime() {
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<style>
-.imgbox {
-  float: left;
-  text-align: center;
-  width: 120px;
-  border: 1px solid gray;
-  margin: 4px;
-  padding: 6px;
-}
-
-button {
-  width: 100%;
-  
- h2.clear{clear:both;}
-
-}
-</style>
+ <meta charset="UTF-8">
+ <title></title>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
+ <style></style>
+ <script>
+ </script>
 </head>
 <body>
 
+<ul>js이용
+ <li>
+ 	<button type="button" 
+         onclick="location.replace('j_js01.jsp');">location.replace('j_js01.jsp')</button>
+ </li>
+ <li>
+ 	<button type="button" 
+         onclick="location.assign('c_css01_p190.html');">location.assign('c_css01_p190.html')</button>
+ </li>
+ <li>
+ 	<button type="button" 
+         onclick="location.reload();">location.reload()</button>
+ </li>
+ <li>location객체의 href속성이용:
+ 	<button type="button" 
+         onclick="javascript:location.href='http://www.naver.com';">
+        네이버로 이동</button>
+ </li>
+ <li>DOM이용:      
+	<button type="button" onclick="changeURL()">네이트로 이동하고 싶으면 클릭 후 아래a태그를 클릭</button>
+ </li>	        
+</ul>        
 
-<div class="imgbox" id="imgbox1">display 속성제어 display()<br>
-  <img src="images/OIP.jpg" alt="Italy" style="width:100%">
-  <button onclick="removeElement()">Remove</button>
-</div>
+*a태그이용:
+<a href="http://www.naver.com" target="_self" id="i1">네이버로 이동</a>
+<br/><br/>
 
-<div class="imgbox" id="imgbox2">display 속성제어 hidden()<br>
-  <img src="images/2.jpg" alt="Lights" style="width:100%">
-  <button onclick="changeVisibility()">Hide</button>
-</div>
+<hr/>   
+*request.getRequestURL():<%=request.getRequestURL() %> 
 
-<div class="imgbox" id="imgbox3">Box 3<br>
-  <img src="images/5.jpg" alt="Forest" style="width:100%">
-  <button onclick="resetElement()">display 속성제어 resetElement()</button>
-</div>
-
+<hr/>
+<h2>Location객체</h2>
+<pre>
+ -원래 Window객체의 location속성이지만 => winodw.location
+  Location객체로 분리해서 사용가능
+ -Location객체는 현재창의 URL에 대한 정보를 포함하고 있다.
+ 
+ location.href=url : 지정주소로 이동.
+ 
+ location.reload() : 새로고침
+ location.replace(url) : 지정주소로 이동. back불가(이전 페이지로 이동 불가)<=Loads a new document
+ location.assign(url)  : 지정주소로 이동. back가능(이전 페이지로 이동 가능)<=Replaces the current document with a new one
+</pre>
+<hr/>
 <script>
-function removeElement() {
-  document.getElementById("imgbox1").style.display = "none";
-}
-
-function changeVisibility() {
-  document.getElementById("imgbox2").style.visibility = "hidden";
-}
-
-function resetElement() {
-  document.getElementById("imgbox1").style.display = "block";
-  document.getElementById("imgbox2").style.visibility = "visible";
-}
+ function changeURL(){
+	 //location.href='http://www.nate.com';
+	 //id가 i1요소에 접근=> a요소 =><a href="주소" target="~" id="i1">글자</a>
+	 let obj=document.querySelector("a#i1");
+	
+	 //a요소 href값을      'http://www.nate.com'으로 변경
+	 //<a href="http://www.nate.com" target="~" id="i1">글자</a>
+	 obj.href='http://www.nate.com';
+	 
+	 //a요소 tartget값을 '_blank'으로 변경
+	 //<a href="http://www.nate.com" target="_blank" id="i1">글자</a>
+	 obj.target='_blank';
+	 
+	 //a요소 내부 글자를      'nate로 링크로 변경됨'으로 변경
+	 obj.innerHTML='nate로 링크로 변경됨';
+		 
+ }
+ document.write("<pre>");
+ document.writeln("프로토콜://ip주소:port/Contextpath/");
+ document.writeln("      현재 URL=>"+"http://localhost:8088/pro1/j_Location.jsp");
+ document.writeln("location.href=>"+location.href);
+ //location.href="http://www.naver.com";
+ document.write("</pre>");
 </script>
-
-  <h2>sd</h2>
-  <pre>
-   - css에서는 선택자{css속성명:값;}
-   #imgbox1 {displat:none;}
-    document.getElementById("imgbox1").style.display = "none";
+ 
+<hr><h2>History객체</h2><hr/>
+<span onclick="history.back()" style="background-color:yellow">history.back()</span>  
+<span onclick="history.go(-1)" style="background-color:orange">history.go(-1)</span>  
+<span onclick="history.forward()" style="background-color:brown">history.forward()</span>  
+<span onclick="history.go(1)" style="background-color:gray">history.go(1)</span>  
    
-   - Javascript에서 style은 객체로서 취급
-        요소.style.css속성명 = 값; (여기서 선택자는 요소에 해당한다.)
-  </pre>
-
 </body>
 </html>
 ```
-
-
-
-
-
-
