Update and rename 47.JQ(on)(ms oven) to 47.JQ(on)(ms oven)(error)(server).md

--- a/47.JQ(on)(ms oven)(error)(server).md
+++ b/47.JQ(on)(ms oven)(error)(server).md
@@ -235,3 +235,48 @@ event.preventDefault()  Prevents the default action of the event
 </body>
 </html>
 ```
+
+## 3. server에 관한 총 정리
+```
+-------------------------------------------------
+client가 server에게 요청 (request)하면
+server는 client에게 응답(response)한다.
+
+*서버에서는 브라우저로 응답(response)을 보내는데
+서버에서는 정적데이터인지, 동적데이터인지에 따르게 처리한다.
+
+-정적(static)데이터 : 항상 동일하게 고정된 데이터를 전송하는 방식. 예)html,css,이미지
+-동적(dynamic)데이터 : 매번 다른 데이터를 동적으로 구성하여 전송.
+     예) 주문목록처럼 상황에 따라 동적으로 서버에서 데이터를 만들어 보내는 방식이라서 
+     서버사이드프로그래밍(Server Side Promgramming)이라 한다.
+     
+ 정적데이터를 보내는 역할을 수행하는 서버가 웹서버 (Web Server),
+ 동적데이터를 만들어 보내는 역할을 웹어플리케이션서버 (WAS: web Application Server)
+
+엄밀한 의미에서는 위의 처럼 나눌 수 있지만, 대부분의 WAS는 웹서버의 기능도 같이 포함되어 있다.
+
+  웹서버 예)apache server, IIS(Windows 전용 웹서버)등
+  WAS 예)Tomcat, Jboss, Jeus등
+  ---------------------------------------------
+ JSP는 파일을 요청하면, 웹서버에서 jsp > java로 변환 > class로 컴파일 하고
+ HTML문서로 응답하는 형태
+  예) index.jsp -> index_jsp.java -> index)jsp.class
+  C:\webStudy\webWK\.metadata\.plugins\org.eclipse.wst.server.core\tmp1\work\Catalina\localhost\webPro\org\apache\jsp
+ 
+ client는 그 응답을 받고 그 데이터를 그냥 놔둔다 (<=Sever와의 연결이 끊긴다.)
+ 
+ 서블릿(servlet)은 jsp표준이 나오기 전에 만들어진 표준으로
+ 자바로 웹 어플리케이션을 개발할 수 있도록 만들어졌다.
+ 
+ URL주소를 통해 client의 요청을 파악하여 특정sevlet이 호출될 수 있도록 한다. 
+```
+
+## 4. errorpage 구현방법.
+ - web.xml에 작성할 코드
+ - 404error 발생시 아래 error폴더에 error404.jsp 페이지를 여는 문구
+```
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error/error404.jsp</location>
+  </error-page>
+```
